[project]
name = "cryptolight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "egor daniloff", email = "i@dea.by" }
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
