[project]
name = "cryptolight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "egor daniloff", email = "i@dea.by" }
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py313"
lint.select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
lint.ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "B009",  # Do not call `getattr` with a constant attribute value
  "C901",  # too complex
  "E701",  # Multiple statements on one line (colon)
]

# Same as Black.
line-length = 100
